# wds-table

./: .editorconfig  .eslintrc.json  .gitignore  .npmrc  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
scripts/: register-file-type.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: file_handler.rs  lib.rs  main.rs  utils.rs
src/components/Dropdown/: index.css  index.tsx
src/components/table/: SvgIcon.tsx  aiSocketClass.js  index.tsx  toolbar.less  toolbar.tsx  utils.ts
src/components/table/complexTable/: AlbumViewer.less  AlbumViewer.tsx  Cell.css  Cell.less  Cell.tsx  ColumnScrollBar.less  ColumnScrollBar.tsx  ComplexTable.less  ConfirmDialog.tsx  DefaultData.ts  DefaultTagColors.ts  HanziInput.tsx  HoverToolbar.tsx  MovableList.tsx  MyDropdown.tsx  ProgressBar.tsx  RowFilter.ts  RowSorter.ts  SpaceFitness.ts  Splitter.less  Splitter.tsx  TD.tsx  (+14 more)
src/components/withTitleBar/: index.less  index.tsx
src/components/withTitleBar2/: index.less  index.tsx
src/locale/: en.ts  i18n.ts  zh.ts
src/pages/home/: index.module.less  index.tsx
src/pages/recent/: index.module.less  index.tsx
src/pages/settings/: index.module.less  index.tsx
src/pages/table/: defaultData.tsx  index.module.less  index.tsx
src/pages/template/: index.tsx
src/utils/: file.ts  index.ts  recentFiles.ts  tableManager.ts
(+82 files in other folders)
